--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "test:e2e": "jest --config ./test/jest-e2e.json",
+        "prepare": "husky"
     },
     "engines": {
         "node": ">=16.0.0"
@@ -44,7 +45,9 @@
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
+        "husky": "^9.1.7",
         "jest": "^29.7.0",
+        "lint-staged": "^15.2.10",
         "prettier": "^3.2.5",
         "source-map-support": "^0.5.21",
         "supertest": "^6.3.4",
@@ -52,7 +55,13 @@
         "ts-loader": "^9.5.1",
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.3.3"
+    "typescript": "^5.3.3"
+    },
+    "lint-staged": {
+        "*.{js,ts}": [
+            "eslint --cache",
+            "prettier --write"
+        ]
     },
     "jest": {
         "moduleFileExtensions": [
