--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "nestjs-starter",
     "private": true,
     "version": "1.0.0",
+    "license": "MIT",
     "packageManager": "pnpm@9.15.0",
     "description": "NestJS + Drizzle ORM starter",
     "author": {
