--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "rxjs": "^7.8.1"
     },
     "devDependencies": {
+        "@eslint/js": "^9.16.0",
         "@nestjs/cli": "^10.4.5",
         "@nestjs/schematics": "^10.1.0",
         "@nestjs/testing": "^10.3.2",
@@ -45,22 +46,21 @@
         "@types/jest": "^29.5.12",
         "@types/node": "^20.11.16",
         "@types/supertest": "^6.0.2",
-        "@typescript-eslint/eslint-plugin": "^6.21.0",
-        "@typescript-eslint/parser": "^6.21.0",
-        "eslint": "^8.56.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.3",
+        "eslint": "^9.16.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "globals": "^15.13.0",
         "husky": "^9.1.7",
         "jest": "^29.7.0",
         "lint-staged": "^15.2.10",
-        "prettier": "^3.2.5",
+        "prettier": "^3.4.2",
         "source-map-support": "^0.5.21",
         "supertest": "^6.3.4",
         "ts-jest": "^29.1.2",
         "ts-loader": "^9.5.1",
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "typescript-eslint": "^8.17.0"
     },
     "lint-staged": {
         "*.{js,ts}": [
